--- a/overview.adoc
+++ b/overview.adoc
@@ -14,13 +14,13 @@ summary: This content provides distribution-specific guidance on how to configur
 :imagesdir: ./media/
 
 [.lead]
-SAN hosts should be configured for multipathing and with specific parameters and settings critical for proper operation with ONTAP LUNs.  The host configuration varies depending on the host operating system and the protocol.  Correct configuration is important for best performance and successful failover. 
+You should configure SAN hosts for multipathing and with specific parameters and settings critical for correct operation with ONTAP LUNs. The host configuration varies depending on the host operating system and the protocol. Correct configuration is important for best performance and successful failover. 
 
-You should configure your SAN hosts to use the NetApp SAN host utilities. SAN host utilities help you manage and monitor your LUNs and host bus adapters (HBAs). For example, you can use the SAN host utilities to retrieve a list of all LUNs mapped to a host or to see a list of all the attributes of a specific LUN mapped to a host. NetApp customer support can also use the SAN host utilities to gather information about your configuration if you have an issue that requires assistance.  
+If it is available, you should configure SAN hosts to use the NetApp SAN Host Utilities (AIX, HP-UX, Linux, Solaris, or Windows). SAN host utilities help you manage and monitor your LUNs and host bus adapters (HBAs). For example, you can use the SAN host utilities to retrieve a list of all LUNs mapped to a host or to see a list of all the attributes of a specific LUN mapped to a host. NetApp customer support can also use the SAN host utilities to gather information about your configuration if you have an issue that requires assistance.  
 
-NetApp recommends using the SAN host utilities software if it is available for your SAN host.  
+NetApp recommends using the SAN host utilities software when it is available for you SAN hosts.  
 
-If it is supported by your SAN configuration, you can also configure your host to use SAN booting for simplified deployment and improved scalability. Using SAN boot, you can deploy multiple new servers by connecting them to SAN and configuring the appropriate boot settings. This saves time by eliminating the need to install the operating system on each server individually. 
+If your SAN configuration supports SAN booting, you can also configure your host to use SAN booting for simplified deployment and improved scalability. Using SAN boot, you can deploy multiple new servers by connecting them to SAN and configuring the appropriate boot settings. This saves time by eliminating the need to install the operating system on each server individually. 
   
 Your SAN hosts and ONTAP storage can reside either on-premises, in the cloud, or both.
 
@@ -31,7 +31,7 @@ For example, you can configure on-premises ONTAP storage to connect to on-premis
 
 .Related information
 
-* The link:https://docs.netapp.com/us-en/ontap/san-config/index.html[ONTAP SAN Configuration^] for your version of ONTAP
-* The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP SAN Administration Guide^] for your version of ONTAP
-* The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
-* The link:https://docs.netapp.com/us-en/e-series/index.html[E-Series documentation^] to find SANtricity related documentation.
+* link:https://docs.netapp.com/us-en/ontap/san-config/index.html[ONTAP SAN configuration reference^]
+* link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP SAN storage management^] 
+* link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP 9 Release Notes^]
+* SANtricity related documentation in the link:https://docs.netapp.com/us-en/e-series/index.html[E-Series systems documentation^] 
