--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -37,7 +37,7 @@ For additional information on supported configurations, see the link:https://mys
 ** SAN booting using the NVMe-oF protocol is currently not supported.
 ** NetApp `sanlun` Host Utilities support isn't available for NVMe-oF on a SUSE Linux Enterprise Server 15 SP6 host. Instead, you can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 
-Depending on your host configuration, you can configure NNMe/FC, NVMe/TCP, or both protocols for SUSE Linux Enterprise Server 15 SP6.
+Depending on your host configuration, you configure NNMe/FC, NVMe/TCP, or both protocols on SUSE Linux Enterprise Server 15 SP6.
 
 == Configure NVMe/FC
 
@@ -363,7 +363,7 @@ Beginning with SUSE Linux Enterprise Server 15 SP6, the default setting for the 
 
 == Validate NVMe-oF
 
-Verify that the in-kernel NVMe multipath status, ANA status, and ONTAP namespaces are correct for the NVMe-oF configuration.
+To support correct operation for ONTAP LUNs, verify that the in-kernel NVMe multipath status, ANA status, and ONTAP namespaces are correct for the NVMe-oF configuration.
 
 .Steps
 
@@ -884,7 +884,7 @@ DHHC-
 
 == Configure Transport Layer Security
 
-Transport Layer Security (TLS) provides secure end-to-end encryption for NVMe connections between NVMe-oF hosts and an ONTAP array. Beginning with ONTAP 9.16.1, you can configure TLS 1.3 using the CLI and a configured pre-shared key (PSK). 
+Transport Layer Security (TLS) provides secure end-to-end encryption for NVMe connections between an NVMe-oF host and ONTAP array. Beginning with ONTAP 9.16.1, you can configure TLS 1.3 using the CLI and a configured pre-shared key (PSK). 
 
 .About this task
 You perform the steps in this procedure on the SUSE Linux Enterprise Server 15 SP6 host, except where it specifies that you perform a step on the ONTAP controller.
