--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -39,10 +39,8 @@ You can use the following procedure to validate the minimum supported RHEL 9.5 s
 . Install RHEL 9.5 on the server. After the installation is complete, verify that you are running the specified RHEL 9.5 kernel: 
 +
 ----
-# uname -r
+uname -r
 ----
-+
-*Example output:*
 +
 ----
 5.14.0-503.11.1.el9_5.x86_64
@@ -51,10 +49,8 @@ You can use the following procedure to validate the minimum supported RHEL 9.5 s
 . Install the `nvme-cli` package:
 +
 ----
-# rpm -qa|grep nvme-cli
+rpm -qa|grep nvme-cli
 ----
-+
-*Example output:*
 +
 ----
 nvme-cli-2.9.1-6.el9.x86_64
@@ -63,11 +59,8 @@ nvme-cli-2.9.1-6.el9.x86_64
 . Install the `libnvme` package:
 +
 ----
-#rpm -qa|grep libnvme
+rpm -qa|grep libnvme
 ----
-+
-
-*Example output* 
 +
 ----
 libnvme-1.9-3.el9.x86_64
@@ -76,10 +69,8 @@ libnvme-1.9-3.el9.x86_64
 . On the RHEL 9.5 host, check the hostnqn string at `/etc/nvme/hostnqn`:
 +
 ----
-# cat /etc/nvme/hostnqn
+cat /etc/nvme/hostnqn
 ----
-+
-*Example output*
 +
 ----
 nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0056-5410-8048-b9c04f425633
@@ -125,24 +116,15 @@ You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
 .Steps
 
 . Verify that you are using the supported adapter model: 
-+
-----
-# cat /sys/class/scsi_host/host*/modelname
-----
-+
-*Example output:*
+
+.. `cat /sys/class/scsi_host/host*/modelname`
 +
 ----
 LPe36002-M64 
 LPe36002-M64
+----
 
-----
-+
-----
-# cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-*Example output:*
+.. `cat /sys/class/scsi_host/host*/modeldesc`
 +
 ----
 Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
@@ -150,51 +132,56 @@ Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 ----
 
 . Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-+
-.Show example output
-[%collapsible]
-=====
-----
-# cat /sys/class/scsi_host/host*/fwrev 
-14.4.317.10, sli-4:6:d
-14.4.317.10, sli-4:6:d
 
-# cat /sys/module/lpfc/version 
+.. `cat /sys/class/scsi_host/host*/fwrev` 
++
+----
+14.4.317.10, sli-4:6:d
+14.4.317.10, sli-4:6:d
+----
+
+.. `cat /sys/module/lpfc/version` 
++
+----
 0:14.4.0.2
 ----
-=====
+
 +
 For the most current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
 +
 ----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
 ----
 
 . Verify that the initiator ports are up and running and that you can see the target LIFs:
+
+.. `cat /sys/class/fc_host/host*/port_name`
 +
-----
-# cat /sys/class/fc_host/host*/port_name 
+---- 
 0x100000109bf044b1
 0x100000109bf044b2
+----
 
-----
+.. `cat /sys/class/fc_host/host*/port_state`
 +
 ----
-# cat /sys/class/fc_host/host*/port_state
 Online
 Online
 ----
 +
+.Show example output
+[%collapsible]
+=====
 [subs=+quotes]
 ----
-# cat /sys/class/scsi_host/host*/nvme_info 
+cat /sys/class/scsi_host/host*/nvme_info 
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b954518 WWNN x200000109b954518 DID x020700 ONLINE
-NVME RPORT       WWPN x201bd039eaa7dfc8 WWNN x201ad039eaa7dfc8 DID x021312 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b954518 WWNN x200000109b954518 DID x020700 *ONLINE*
+NVME RPORT       WWPN x201bd039eaa7dfc8 WWNN x201ad039eaa7dfc8 DID x021312 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 00000000ac Cmpl 00000000ac Abort 00000000
@@ -205,7 +192,7 @@ FCP CMPL: xb 00000000 Err 00000000
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b954519 WWNN x200000109b954519 DID x020500 ONLINE
+NVME LPORT lpfc1 WWPN x100000109b954519 WWNN x200000109b954519 DID x020500 *ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000000 Cmpl 0000000000 Abort 00000000
@@ -216,9 +203,9 @@ FCP CMPL: xb 00000000 Err 00000000
 
 NVME Initiator Enabled
 XRI Dist lpfc2 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc2 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 ONLINE
-NVME RPORT       WWPN x202fd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x021310 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x202dd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020b10 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc2 WWPN x100000109bf044b1 WWNN x200000109bf044b1 DID x022a00 *ONLINE*
+NVME RPORT       WWPN x202fd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x021310 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x202dd039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020b10 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000810 Cmpl 0000000810 Abort 00000000
@@ -229,9 +216,9 @@ FCP CMPL: xb 000013b4 Err 00021443
 
 NVME Initiator Enabled
 XRI Dist lpfc3 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc3 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 ONLINE
-NVME RPORT       WWPN x2033d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020110 TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x2032d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x022910 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc3 WWPN x100000109bf044b2 WWNN x200000109bf044b2 DID x021b00 *ONLINE*
+NVME RPORT       WWPN x2033d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x020110 *TARGET DISCSRVC ONLINE*
+NVME RPORT       WWPN x2032d039eaa7dfc8 WWNN x202cd039eaa7dfc8 DID x022910 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000840 Cmpl 0000000840 Abort 00000000
@@ -240,7 +227,7 @@ Total FCP Cmpl 000000007afd4434 Issue 000000007ae31b83 OutIO ffffffffffe5d74f
         abort 000014a5 noxri 00000000 nondlp 0000006a qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 000014a5 Err 0002149a
 ----
-
+=====
 
 --
 
@@ -254,10 +241,8 @@ The native inbox qla2xxx driver included in the RHEL 9.5 GA kernel has the lates
 . Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
-# cat /sys/class/fc_host/host*/symbolic_name
+cat /sys/class/fc_host/host*/symbolic_name
 ----
-+
-*Example output*
 +
 ----
 QLE2742 FW:v9.14.00 DVR:v10.02.09.200-k
@@ -267,8 +252,10 @@ QLE2742 FW:v9.14.00 DVR:v10.02.09.200-k
 . Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
 +
 ----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
+cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
+----
++
+The expected ouptut is 1.
 ----
 
 --
@@ -291,11 +278,10 @@ NVMe/TCP does not have an auto-connect functionality. Therefore, you should use 
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
-[subs=+quotes]
-----
-# nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.24
+.Show example output
+[%collapsible%]
+====
+nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.24
 
 Discovery Log Number of Records 20, Generation counter 25
 =====Discovery Log Entry 0======
@@ -307,45 +293,45 @@ portid:  4
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:discovery
 traddr:  192.168.2.25
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 1======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:discovery
 traddr:  192.168.1.25
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 2======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  5
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:discovery
 traddr:  192.168.2.24
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 3======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:discovery
 traddr:  192.168.1.24
-eflags:  explicit discovery connections, duplicate discovery information
+eflags:  *explicit discovery connections, duplicate discovery information*
 sectype: none
 =====Discovery Log Entry 4======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  4
 trsvcid: 4420
@@ -356,7 +342,7 @@ sectype: none
 =====Discovery Log Entry 5======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 4420
@@ -367,7 +353,7 @@ sectype: none
 =====Discovery Log Entry 6======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  5
 trsvcid: 4420
@@ -378,7 +364,7 @@ sectype: none
 =====Discovery Log Entry 7======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 4420
@@ -389,7 +375,7 @@ sectype: none
 =====Discovery Log Entry 8======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  4
 trsvcid: 4420
@@ -400,7 +386,7 @@ sectype: none
 =====Discovery Log Entry 9======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 4420
@@ -411,7 +397,7 @@ sectype: none
 =====Discovery Log Entry 10======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  5
 trsvcid: 4420
@@ -422,7 +408,7 @@ sectype: none
 =====Discovery Log Entry 11======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 4420
@@ -433,7 +419,7 @@ sectype: none
 =====Discovery Log Entry 12======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  4
 trsvcid: 4420
@@ -444,7 +430,7 @@ sectype: none
 =====Discovery Log Entry 13======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 4420
@@ -455,7 +441,7 @@ sectype: none
 =====Discovery Log Entry 14======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  5
 trsvcid: 4420
@@ -466,7 +452,7 @@ sectype: none
 =====Discovery Log Entry 15======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 4420
@@ -477,7 +463,7 @@ sectype: none
 =====Discovery Log Entry 16======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  4
 trsvcid: 4420
@@ -488,7 +474,7 @@ sectype: none
 =====Discovery Log Entry 17======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  2
 trsvcid: 4420
@@ -499,7 +485,7 @@ sectype: none
 =====Discovery Log Entry 18======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  5
 trsvcid: 4420
@@ -510,7 +496,7 @@ sectype: none
 =====Discovery Log Entry 19======
 trtype:  tcp
 adrfam:  ipv4
-subtype: nvme subsystem
+subtype: *nvme subsystem*
 treq:    not specified
 portid:  1
 trsvcid: 4420
@@ -518,7 +504,7 @@ subnqn:  nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:subsystem.nv
 traddr:  192.168.1.24
 eflags:  none
 sectype: none
-----
+====
 
 . Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data: 
 +
@@ -526,14 +512,14 @@ sectype: none
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
-----
-#nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.24 
-#nvme discover -t tcp -w 192.168.2.31 -a 192.168.2.24 
-#nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.25 
-#nvme discover -t tcp -w 192.168.2.31 -a 192.168.2.25
-----
+.Show example output
+[%collapsible%]
+====
+nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.24 
+nvme discover -t tcp -w 192.168.2.31 -a 192.168.2.24 
+nvme discover -t tcp -w 192.168.1.31 -a 192.168.1.25 
+nvme discover -t tcp -w 192.168.2.31 -a 192.168.2.25
+====
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
@@ -541,14 +527,14 @@ nvme discover -t tcp -w host-traddr -a traddr
 nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
-----
-#	nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.24
-#	nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.24
-#	nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.25
-#	nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.25					
-----
+.Show example output
+[%collapsible%]
+====
+nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.24
+nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.24
+nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.25
+nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.25					
+====
 
 [NOTE]
 Beginning with RHEL 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
@@ -563,20 +549,21 @@ You can use the following procedure to validate NVME-oF.
 . Verify that the in-kernel NVMe multipath is enabled:
 +
 ----
-# cat /sys/module/nvme_core/parameters/multipath
+cat /sys/module/nvme_core/parameters/multipath
 Y
 ----
 
 . Verify that the appropriate NVMe-oF settings (such as, model set to NetApp ONTAP Controller and load balancing iopolicy set to round-robin) for the respective ONTAP namespaces correctly reflect on the host:
+
+.. `cat /sys/class/nvme-subsystem/nvme-subsys*/model`
 +
 ----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/model
 NetApp ONTAP Controller
 NetApp ONTAP Controller
 ----
+.. `cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy` 
 +
 ----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy 
 round-robin
 round-robin
 ----
@@ -584,11 +571,12 @@ round-robin
 . Verify that the namespaces are created and correctly discovered on the host:
 +
 ----
-# nvme list
+nvme list
 ----
 +
-*Example output:*
-+
+.Show example output
+[%collapsible]
+====
 ----
 Node         SN                   Model                          
 ---------------------------------------------------------  
@@ -599,70 +587,76 @@ Namespace Usage    Format             FW             Rev
 -----------------------------------------------------------
 1                 21.47 GB / 21.47 GB	4 KiB + 0 B   FFFFFFFF
 ----
-
+====
 . Verify that the controller state of each path is live and has the correct ANA status:
 +
-
 [role="tabbed-block"]
-====
+=====
 .NVMe/FC
 --
 ----
-# nvme list-subsys /dev/nvme4n5
+nvme list-subsys /dev/nvme4n5
 ----
 
-*Example output:*
+.Show example output
+[%collapsible]
+====
 [subs=+quotes]
 ----
 nvme-subsys4 - NQN=nqn.1992-08.com.netapp:sn.3a5d31f5502c11ef9f50d039eab6cb6d:subsystem.nvme_1
                hostnqn=nqn.2014-08.org.nvmexpress:uuid:e6dade64-216d-
 11ec-b7bb-7ed30a5482c3
 iopolicy=round-robin\
-+- nvme1 fc traddr=nn-0x2082d039eaa7dfc8:pn-0x2088d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d live optimized
-+- nvme12 fc traddr=nn-0x2082d039eaa7dfc8:pn-0x208ad039eaa7dfc8,host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d live non-optimized
-+- nvme10 fc traddr=nn-0x2082d039eaa7dfc8:pn-0x2087d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c live non-optimized
-+- nvme3 fc traddr=nn-0x2082d039eaa7dfc8:pn-0x2083d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c live optimized
++- nvme1 *fc* traddr=nn-0x2082d039eaa7dfc8:pn-0x2088d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d *live optimized*
++- nvme12 *fc* traddr=nn-0x2082d039eaa7dfc8:pn-0x208ad039eaa7dfc8,host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d *live non-optimized*
++- nvme10 *fc* traddr=nn-0x2082d039eaa7dfc8:pn-0x2087d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c *live non-optimized*
++- nvme3 *fc* traddr=nn-0x2082d039eaa7dfc8:pn-0x2083d039eaa7dfc8,host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c *live optimized*
 ----
 --
 .NVMe/TCP
 --
 ----
-# nvme list-subsys /dev/nvme1n1 
+nvme list-subsys /dev/nvme1n1 
 ----
 
-*Example output:*
-
+.Show example output
+[%collapsible]
+====
 [subs=+quotes]
 ----
 nvme-subsys5 - NQN=nqn.1992-08.com.netapp:sn.0f4ba1e74eb611ef9f50d039eab6cb6d:subsystem.nvme_tcp_3 
 hostnqn=nqn.2014-08.org.nvmexpress:uuid:4c4c4544-0035-5910-804b-b5c04f444d33
 iopolicy=round-robin
 \
-+- nvme13 tcp traddr=192.168.2.25,trsvcid=4420,host_traddr=192.168.2.31,
-src_addr=192.168.2.31 live optimized
-+- nvme14 tcp traddr=192.168.2.24,trsvcid=4420,host_traddr=192.168.2.31,
-src_addr=192.168.2.31 live non-optimized
-+- nvme5 tcp traddr=192.168.1.25,trsvcid=4420,host_traddr=192.168.1.31,
-src_addr=192.168.1.31 live optimized
-+- nvme6 tcp traddr=192.168.1.24,trsvcid=4420,host_traddr=192.168.1.31,
-src_addr=192.168.1.31 live non-optimized
++- nvme13 *tcp* traddr=192.168.2.25,trsvcid=4420,host_traddr=192.168.2.31,
+src_addr=192.168.2.31 *live optimized*
++- nvme14 *tcp* traddr=192.168.2.24,trsvcid=4420,host_traddr=192.168.2.31,
+src_addr=192.168.2.31 *live non-optimized*
++- nvme5 *tcp* traddr=192.168.1.25,trsvcid=4420,host_traddr=192.168.1.31,
+src_addr=192.168.1.31 *live optimized*
++- nvme6 *tcp* traddr=192.168.1.24,trsvcid=4420,host_traddr=192.168.1.31,
+src_addr=192.168.1.31 *live non-optimized*
 ----
---
 ====
+--
+=====
 
 . Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
 [role="tabbed-block"]
-====
+=====
 .Column
 --
 ----
-# nvme netapp ontapdevices -o column
+nvme netapp ontapdevices -o column
 ----
 
-*Example output:*
-
+.Show example output
+[%collapsible]
+====
+[subs=+quotes]
 ----
+
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
 /dev/nvme1n1     linux_tcnvme_iscsi        /vol/tcpnvme_1_0_0/tcpnvme_ns 
@@ -675,10 +669,13 @@ NSID       UUID                                   Size
 .JSON
 --
 ----
-# nvme netapp ontapdevices -o json
+nvme netapp ontapdevices -o json
 ----
 
-*Example output*
+.Show example output
+[%collapsible]
+====
+[subs=+quotes]
 ----
 {
   "ONTAPdevices":[
@@ -695,8 +692,9 @@ NSID       UUID                                   Size
 ]
 }
 ----
---
 ====
+--
+=====
 
 == Known issues
 
