--- a/nvme_rhel_95.adoc
+++ b/nvme_rhel_95.adoc
@@ -287,7 +287,7 @@ Discovery Log Number of Records 20, Generation counter 25
 =====Discovery Log Entry 0======
 trtype:  tcp
 adrfam:  ipv4
-subtype: current discovery subsystem
+subtype: *current discovery subsystem*
 treq:    not specified
 portid:  4
 trsvcid: 8009
