--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -3,4 +3,6 @@
 In All SAN Array (ASA) configurations, all paths to a given LUN are active and optimized. This improves performance by serving I/O operations through all paths at the same time.
 
 .Example
-The following example displays the correct output for an ONTAP LUN:
+The following example displays the correct output for an ONTAP LUN.
+
+//ONTAPDOC-2561 4-Dec-2024
