--- a/_include/hu/reuse_hu_recommended_settings.adoc
+++ b/_include/hu/reuse_hu_recommended_settings.adoc
@@ -1,9 +1,13 @@
 The first time you create the `multipath.conf` file, you might need to enable and start the multipath services by using the following commands:
 
-`# chkconfig multipathd on`
-`# /etc/init.d/multipathd start`
+----
+`chkconfig multipathd on`
+----
+----
+`/etc/init.d/multipathd start`
+----
 
-You don't need to add anything directly to the `multipath.conf` file unless you have devices that you don't want multipath to manage or you have existing settings that override defaults. To exclude unwanted devices, add the following syntax to the `multipath.conf` file, replacing <DevId> with the WWID string of the device you want to exclude:
+You don't need to add anything directly to the `multipath.conf` file unless you have devices that you don't want multipath to manage or you have existing settings that override defaults. To exclude unwanted devices, add the following syntax to the `multipath.conf` file, replacing <DevId> with the worldwide identifier (WWID) string of the device you want to exclude:
 
 ----
 blacklist {
@@ -21,13 +25,17 @@ The following example determines the WWID of a device and adds it to the `multip
 . Determine the WWID:
 +
 ----
-# /lib/udev/scsi_id -gud /dev/sda
+/lib/udev/scsi_id -gud /dev/sda
+----
++
+----
 3600a098038314c4a433f5774717a3046
 ----
 +
 `sda` is the local SCSI disk that you want to add to the blacklist.
 
 . Add the `WWID` to the blacklist stanza in `/etc/multipath.conf`:
+[source,cli]
 +
 ----
 blacklist {
