updated passive voice to active

--- a/_include/hu/reuse_hu_san_toolkit_withoutexample.adoc
+++ b/_include/hu/reuse_hu_san_toolkit_withoutexample.adoc
@@ -1,3 +1,3 @@
-The toolkit is installed automatically when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility, which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+Installing the NetApp Host Utilities package automatically installs the toolkit. This kit provides the `sanlun` utility, which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
 //ONTAPDOC-2561 4-Dec-2024
