--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -1,4 +1,4 @@
-The NetApp Linux Unified Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 64-bit .rpm file.
+You can download the NetApp Linux Unified Host Utilities software package as a 64-bit.rpm file from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^].
 
 NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
@@ -12,3 +12,5 @@ If you have a version of Linux Unified Host Utilities currently installed, you s
 . Install the software package:
 +
 `rpm -ivh netapp_linux_unified_host_utilities-7-1.x86_64`
+
+//ONTAPDOC-2561 25-Nov-2024
