--- a/_include/hu/reuse_hu_san_booting_steps.adoc
+++ b/_include/hu/reuse_hu_san_booting_steps.adoc
@@ -4,7 +4,7 @@
 . Verify that multiple paths are available.
 +
 [NOTE] 
-Multiple paths become available after the host OS is up and running on the paths.
+The host OS establishes multiple paths after it is up and running.
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
