--- a/hu_rhel_95.adoc
+++ b/hu_rhel_95.adoc
@@ -127,7 +127,7 @@ include::_include/hu/reuse_hu_recommended_settings.adoc[]
 
 .Example
 
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because other SAN arrays are still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
+The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If other SAN arrays are still attached to the host, correct these parameters specifically for ONTAP LUNs by using a device stanza.
 
 .Show example output
 [%collapsible%]
