final changes to release doc

--- a/_include/hu/reuse_hu_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_asa_configuration.adoc
@@ -1,4 +1,4 @@
-=== All SAN Array configurations
+=== Set up All SAN Array configurations
 
 All SAN Array (ASA) configurations optimize all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time.
 
