--- a/_include/hu/reuse_hu_non_asa_configuration.adoc
+++ b/_include/hu/reuse_hu_non_asa_configuration.adoc
@@ -1,4 +1,4 @@
-=== Non-ASA configurations
+=== Set up Non-ASA configurations
 
 For non-ASA configurations, there should be two groups of paths with different priorities. The paths with higher priorities are Active/Optimized, meaning they are serviced by the controller where the aggregate is located. The paths with lower priorities are active but are non-optimized because they are served from a different controller. The non-optimized paths are only used when optimized paths are not available.
 
